css/styles.css
@charset "UTF-8";
/* CSS Document */

a.active, a.visited, a {
	color:#4b4b4b;
	text-decoration:none;
}

body {
	margin:0;
	padding:0;
	background: url(../images/bg2.jpg) no-repeat center 30% fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	font-family: "Open Sans", Helvetica Neue, Helvetica, Arial;
	font-size:16px;
	font-weight:300;
	background-color:#fff;
	color:black;
}

#title {
	color:#4b4b4b;
	font-size:30px;
	padding-left:40px;
	clear:both;
	padding-bottom:0;
	margin-bottom:0;
}

p {
	font-family: 'PT Serif', Cardo, serif;
	padding-left:0px;
	line-height:1.4;
	font-size:18px;
	text-align:justify;
}

ul, li {
	font-family: Cardo, serif;
	margin-left:10px;
	line-height:1.4;
}

.subtitle {
	color:#4b4b4b;
	font-size:14px;
	font-family: Helvetica Neue, Helvetica, Arial;
	margin-left:auto;margin-right:auto;
	padding-bottom:0;
	margin-bottom:0;
	text-align:center;
	clear:both;
}

.tiny_text {
	color:#4b4b4b;
	font-size:11px;
	font-family: Helvetica Neue, Helvetica, Arial;
	margin-left:auto;margin-right:auto;
	padding-bottom:15px;
	padding-top:0;
	margin-top:0;
	text-align:center;
	clear:both;
}

svg {
	font: 10px sans-serif;
	margin-top:15px;
	/*border-right:1px solid white;*/
}

svg.left {
	margin-left:30px;
}

svg.right {
	margin-left:1px;
}

svg.left rect {
	fill:#dcdcdc;
	/*fill:#dcd3d3;*/
}

svg rect.module_name_box {
	fill:#dcdcdc;
	opacity:1;
	position:absolute;
	display:none;
}

.module_name {
	display:none;
}

svg.right rect {
	fill:#76B0D8;
	/*fill: #0095DD;*/
}

text {
	cursor:default;
	fill:white;
	stroke:none;
	stroke-width:1;
	font-family:'Open Sans', 'Gill Sans', Arial;
    font-size:11px;
    text-antialiasing:true;
    font-weight:600;
    kerning:0.5;
}

text.y_label {
	fill:#5d5d5d;
}

text.module_name {
    /*opacity:0.2;*/
    fill:black;
    opacity:1;
    font-weight:600;
}

#chart {
	border:0px solid #4b4b4b;
}

#dsm, #dsm_prop {
	width:530px;
	height:510px;
	border:0px solid black;
	position:relative;
	top:4px;
	left:0px;
	float:left;
	background-image:url(../images/loading.gif);
	background-repeat:no-repeat;
	background-position:center 200px;
}

#dsm_y_coords, #dsm_prop_y_coords {
	width:30px;
	height:530px;
	border:0px solid black;
	position:relative;
	top:0px;
	left:0px;
	float:left;
}

#dsm_x_coords, #dsm_prop_x_coords {
	padding-left:30px;
	width:530px;
	height:15px;
	border:0px solid black;
	position:relative;
	top:0px;
	left:0px;
	float:left;
}

canvas {
	background-color:#0f0f0f;
	border:4px solid #cdcdcd;
	opacity:1;
	margin-left:5px;
	margin-right:5px;
}

#canvases div img {
	border:4px solid #cdcdcd;
	position:absolute;
	float:left;
}

#canvas1 {
	float:left; /* remove when raster is selected */ 
	margin-left:112px;
}

#canvas2 {
	float:left; /* remove when raster is selected */ 
	margin-left:10px;
}

#canvases {
	position:relative;
	width:1260px;
	margin-left:auto;
	margin-right:auto;
	margin-top:30px;
	margin-bottom:2px;
	overflow:visible;
	height:550px;
}

#labels {
	width:1360px;
	margin-left:auto;
	margin-right:auto;
	margin-top:0px;
	margin-bottom:0px;
	overflow:visible;
	height:10px;
}

#lhs, #rhs {
	text-align:center;
	width:50%;
	float:left;
	font-family:Signika, Helvetica, Arial;
	color:#3b3b3b;
	font-weight:400;
	font-size:30px;
}

#page {
	width:1360px;
	margin-left:auto;
	margin-right:auto;
	margin-top:20px;
	margin-bottom:30px;
	height:3450px;
}

.axis g text {
	opacity:0.5;
}

#rotate {
	background-color:black;
	width:658px;
	height:660px;
	display:none;
}

#metric {
	width:100%;
	height:790px;
	/*border:1px solid #cccccc;*/
	margin-top:0px;
	padding-top:30px;
	/*background-image: url(../images/noise.png);*/
	background-image:url(../images/alpha.png);
	linear-gradient(hsla(0,0%,100%,.7), hsla(0,0%,100%,.4));
}

#version_select {
	width:100%;
	height:50px;
	padding-top:15px;
	padding-bottom:15px;
	border-bottom:0px solid #cccccc;
	font-size:24px;
	/*background-image: url(../images/noise_light.png);
	linear-gradient(hsla(0,0%,100%,.7), hsla(0,0%,100%,.4));*/
	background-image: url(../images/alpha.png);
}

#main_options {
	margin-left:auto;
	margin-right:auto;

	width:1360px;
	height:50px;
	margin-top:20px;
	margin-bottom:30px;
	font-weight:300;
	border-radius:30px;
	/*background-color:#d9d9d9;
	background-image:url(../images/gradient_grey.png);
	background-repeat:repeat-x;*/
	background-image:url(../images/alpha.png);
}

#main_options a div {
	width:33%;
	float:left;
	margin-top:5px;
	text-align:center;
	padding-top:10px;
	height:60%;
	color:white;
}

h1 {
	font-family: 'Old Standard TT', serif;
	font-weight:300;
	margin-bottom:0;
	padding-bottom:0;
}

.module_value {
	opacity:0.8;
	font-size:9px;
	font-weight:600;
}

#metric div.topmetric {
	float:left;
	width:450px;
	height:340px;
	margin-bottom:50px;
}

#metric div.metric_title {
	font-family: 'Old Standard TT', serif;
	font-size:22px;
	font-weight:400;
	margin-left:auto;
	margin-right:auto;
	position:absolute;
	height:20px;
	text-align:center;
	margin-top:4px;
	color:white;
}

svg rect.module_bar {
}

svg rect.module_bar_transparent {
	opacity:0;
}

#main_options a div div.selected_view {
	clear:both;
	position:absolute;
	margin-top:10px;
	width:450px;
	height:3px;
	background-color:#FF9500;
	padding:0;
	margin-left:0px;
	display:none;
}

#main_options a#switch_to_matrix div div.selected_view {
	margin-left:20px;
	width:429px;
}

#main_options a#switch_to_network div div.selected_view {
	width:440px;
}

#wide_pane {
	position:absolute;
	background-color:#fff;
	height:100px;
	width:1300px;
	margin-bottom:100px;
	margin-left:33px;
	margin-top:30px;
	z-index:1;
	border-top:1px solid #cccccc;
}

#logo_container {
	position:absolute;
	right:0;
	bottom:15px;
	width:100%;
	z-index:2;
	color:#3b3b3b;
	font-size:13px;
	font-weight:400;
	font-family:'Open Sans';
}

#logo_container a {
	border-bottom:1px dotted #a3a3a3;
}
/* ... */

